<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LogInWindow</class>
 <widget class="QDialog" name="LogInWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>650</width>
    <height>450</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>650</width>
    <height>450</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>650</width>
    <height>450</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Trace</string>
  </property>
  <property name="styleSheet">
   <string notr="true"/>
  </property>
  <widget class="QWidget" name="registration_widget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>650</width>
     <height>450</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
     <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>23989</width>
     <height>2349023</height>
    </size>
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget {
	height: 520px;
	width: 400px;
	background-color: rgb(40, 39, 46);
	position: absolute;
}</string>
   </property>
   <widget class="QLineEdit" name="login_input_field">
    <property name="geometry">
     <rect>
      <x>165</x>
      <y>170</y>
      <width>321</width>
      <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
	border: 2px solid rgb(37, 39, 48);
	border-radius: 20px;
	color: #FFF;
	padding-left: 20px;
	padding-right: 20px;
	background-color: rgb(55, 54, 61);
}

QLineEdit:hover {
	border: 2px solid rgb(48, 50, 62);
}

QLineEdit:focus {
	border: 2px solid rgb(85, 170, 255);
	background-color: rgb(43, 45, 56);
}</string>
    </property>
    <property name="placeholderText">
     <string>Username</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="password_input_field">
    <property name="geometry">
     <rect>
      <x>165</x>
      <y>250</y>
      <width>321</width>
      <height>40</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>14</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit {
	border: 2px solid rgb(37, 39, 48);
	border-radius: 20px;
	color: #FFF;
	padding-left: 20px;
	padding-right: 20px;
	background-color: rgb(55, 54, 61);
}

QLineEdit:hover {
	border: 2px solid rgb(48, 50, 62);
}

QLineEdit:focus {
	border: 2px solid rgb(85, 170, 255);
	background-color: rgb(43, 45, 56);
}</string>
    </property>
    <property name="echoMode">
     <enum>QLineEdit::EchoMode::Password</enum>
    </property>
    <property name="placeholderText">
     <string>Password</string>
    </property>
   </widget>
   <widget class="QLabel" name="login_label">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>140</y>
      <width>41</width>
      <height>21</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Poppins</family>
      <pointsize>-1</pointsize>
      <kerning>true</kerning>
      <fontweight>Medium</fontweight>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel 
{
	font-family: 'Poppins',sans-serif;
	letter-spacing: 0.5px;
	color: #ffffff;
	font-weight: 500;
	font-size: 16px;
}</string>
    </property>
    <property name="text">
     <string>Login</string>
    </property>
   </widget>
   <widget class="QLabel" name="password_label">
    <property name="geometry">
     <rect>
      <x>190</x>
      <y>220</y>
      <width>81</width>
      <height>21</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Poppins</family>
      <pointsize>-1</pointsize>
      <fontweight>Medium</fontweight>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel 
{
	font-family: 'Poppins',sans-serif;
	letter-spacing: 0.5px;
	color: #ffffff;
	font-weight: 500;
	font-size: 16px;
}</string>
    </property>
    <property name="text">
     <string>Password</string>
    </property>
   </widget>
   <widget class="QPushButton" name="log_in_button">
    <property name="geometry">
     <rect>
      <x>165</x>
      <y>330</y>
      <width>321</width>
      <height>50</height>
     </rect>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton
{
	background-color: #ffffff;
	color: #080710;
	font-size: 18px;
	font-family: 'Poppins',sans-serif;
	letter-spacing: 0.5px;
	border-radius: 20px;
	font-weight: 600;
}
QPushButton:hover {
	border: 2px solid rgb(40, 39, 46);
}</string>
    </property>
    <property name="text">
     <string>Log In</string>
    </property>
   </widget>
   <widget class="QLabel" name="dont_have_label">
    <property name="geometry">
     <rect>
      <x>193</x>
      <y>400</y>
      <width>161</width>
      <height>20</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel
{
	color: rgb(155, 155, 158);
	font-family: 'Poppins',sans-serif;
	letter-spacing: 0.5px;
	font-weight: 500;
	font-size: 13px;
}</string>
    </property>
    <property name="text">
     <string>Don't have an account?</string>
    </property>
   </widget>
   <widget class="QLabel" name="for_free_label">
    <property name="geometry">
     <rect>
      <x>404</x>
      <y>400</y>
      <width>61</width>
      <height>21</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel
{
	color: rgb(155, 155, 158);
	font-family: 'Poppins',sans-serif;
	letter-spacing: 0.5px;
	font-weight: 500;
	font-size: 13px;
}</string>
    </property>
    <property name="text">
     <string> for free!</string>
    </property>
   </widget>
   <widget class="QPushButton" name="sign_up_button">
    <property name="geometry">
     <rect>
      <x>353</x>
      <y>400</y>
      <width>51</width>
      <height>20</height>
     </rect>
    </property>
    <property name="cursor">
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton
{
	color: #ffffff;
	font-family: 'Poppins',sans-serif;
	letter-spacing: 0.5px;
	color: #ffffff;
	font-weight: 500;
	font-size: 13px;
	background-color: rgb(40, 39, 46);
	border-radius: 10px;
}</string>
    </property>
    <property name="text">
     <string>Sign up</string>
    </property>
   </widget>
   <widget class="QLabel" name="sign_in_label">
    <property name="geometry">
     <rect>
      <x>259</x>
      <y>60</y>
      <width>103</width>
      <height>38</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>Poppins</family>
      <pointsize>-1</pointsize>
      <fontweight>Medium</fontweight>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel
{
	font-family: 'Poppins',sans-serif;
	color: #ffffff;
  	letter-spacing: 0.5px;
	font-size: 32px;
  	font-weight: 500;
  	line-height: 42px;
  	text-align: center;
}</string>
    </property>
    <property name="text">
     <string>Sign In</string>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
